# SensorMotionRobot-2018-2

./: README.md
SensorMotionRobotProgramming2018/mobile_robot/: CMakeLists.txt
SensorMotionRobotProgramming2018/ros_programming1/: CMakeLists.txt  package.xml
SensorMotionRobotProgramming2018/ros_programming1/src/: pub.cpp  sub.cpp
SensorMotionRobotProgramming2018/tf_practice/: CMakeLists.txt  package.xml
SensorMotionRobotProgramming2018/tf_static_practice/: package.xml
action_basic/: CMakeLists.txt  package.xml
action_basic/action/: fibonacci.action
action_basic/src/: action_basic_client.cpp  action_basic_server.cpp
beginner_tutorials/: CMakeLists.txt  package.xml
beginner_tutorials/launch/: turtlemimic.launch
beginner_tutorials/src/: listener.cpp  talker.cpp
cossin_service/: CMakeLists.txt  package.xml
cossin_service/src/: cossin_client.cpp  cossin_server.cpp
cossin_service/srv/: SrvAngle.srv
diff_velocity_msgs/: CMakeLists.txt  package.xml
endeffector_extractor/: CMakeLists.txt  package.xml
endeffector_extractor/src/: endeffector_extractor.cpp
goal_point_collector/: CMakeLists.txt  package.xml
goal_point_collector/src/: goal_point_collector.cpp  goal_point_saver.cpp
laser_2d_projection/: CMakeLists.txt  package.xml
laser_2d_projection/launch/: laser_2d_protjection.launch
led_control/: CMakeLists.txt  package.xml
led_control/src/: led_publisher.cpp
led_controller/: CMakeLists.txt  package.xml
led_controller/cfg/: led_pub.yaml
led_controller/launch/: led_pub.launch
led_controller/src/: led_pub.cpp
manipulator_controller/: CMakeLists.txt  package.xml
manipulator_controller/cfg/: controller.yaml
manipulator_controller/launch/: controller.launch
manipulator_controller/src/: controller.cpp
my_first_ros_pkg/: CMakeLists.txt  package.xml
my_first_ros_pkg/src/: hello_world_node.cpp
open_manipulator_gazebo/: package.xml
open_manipulator_gazebo/launch/: open_manipulator_gazebo.launch
parameter_tutorials/: CMakeLists.txt  package.xml
parameter_tutorials/launch/: sample_launch.launch
parameter_tutorials/src/: parameter_client.cpp  parameter_server.cpp
project/: CMakeLists.txt  package.xml
project/cfg/: dwa_local_planner_params.yaml  local_costmap_params.yaml  mobile_robot_odometry.yaml
project/launch/: localization.launch  mapping.launch  move_base.launch
project/map/: hn_424.pgm  hn_424.yaml
project/src/: tf_project.cpp
service_basic/: CMakeLists.txt  package.xml
service_basic/src/: service_basic_client.cpp  service_basic_server.cpp
service_tutorial/: CMakeLists.txt  package.xml
service_tutorial/src/: client.cpp  server.cpp
service_tutorial/srv/: test_srv.srv
simple_goal_sender/: CMakeLists.txt  package.xml
simple_goal_sender/cfg/: goal1.yaml  goal2.yaml  goal_1.yaml  goal_2.yaml
simple_goal_sender/launch/: custom_goal_sender.launch
simple_goal_sender/src/: custom_goal_sender.cpp  (+1 more)
testbot_description/: package.xml
topic_basic/: CMakeLists.txt  package.xml
topic_class/: CMakeLists.txt  package.xml
(+29 files in other folders)
